--- a/AndroidGitProject/app/src/main/res/values/strings.xml
+++ b/AndroidGitProject/app/src/main/res/values/strings.xml
@@ -17,8 +17,11 @@
 
     </string-array>
 
-    <string name="title_message" >Message</string>
+    <string name="title_message">Message</string>
     <string name="title_friends">Friends</string>
     <string name="title_home">Home</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
